# PR-review

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  main.py  pyproject.toml
src/pr_review/: config.py  main.py
src/pr_review/github/: client.py  fetch_diff.py  post_review.py
src/pr_review/jobs/: queue.py  tasks.py  worker.py
src/pr_review/llm/: client.py  models.py  prompts.py
src/pr_review/review/: analyze.py  build_context.py  parse_diff.py
src/pr_review/webhook/: handler.py  verify_signature.py
